--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 body {
   background-color: #2c3e50;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .btn {
   cursor: pointer;
-}
-
-body {
-  color: white;
 }
 
 .clicked {
@@ -40,4 +40,23 @@ body {
   height: 100%;
   z-index: -1;
   animation: fadeIn 0.5s linear;
+}
+
+.js-clock {
+  font-size: 50px;
+  margin-top: 40px;
+}
+
+.js-weather {
+  font-size: 25px;
+}
+
+h4 {
+  font-size: 35px;
+}
+
+.formInput,
+.toDoInput,
+.js-toDoList {
+  font-size: 20px;
 }
